@@ -1,6 +1,5 @@
 
 * other features (easy)
-** init=pca
 ** add a function graph2SOM that projects a graph on the grid
    (use projectGraph), create a class and a plot method for it
 ** add weights to observations
