@@ -50,11 +50,13 @@ initSOM(dimension=c(5,5), topo=c("square"),
   \item{verbose}{The boolean value which activates the verbose mode during the
   SOM algorithm process. Default value is \code{FALSE}.}
   \item{proto0}{The initial prototypes. Default value is \code{NULL}.}
-  \item{init.proto}{The method to be used to initialize the prototypes, either 
-  randomization or an observation sample. This 
-  argument is only considered when \code{proto0=NULL}. Default value is 
+  \item{init.proto}{The method to be used to initialize the prototypes, which
+  may be \code{random} (randomization), \code{obs} (each prototype is assigned
+  a random observation) or \code{pca} (the prototypes are initialized as a 
+  grid along the two first principal components of the data). Default value is 
   \code{random} for the \code{numeric} and \code{korresp} types, and 
-  \code{obs} for the \code{relational} type.}
+  \code{obs} for the \code{relational} type. \code{pca} is not available for
+  \code{relational} SOM.}
   \item{scaling}{The type of data pre-processing. For \code{numeric} SOM, 
   possibilities are \code{unitvar} (data are centered and scaled; this 
   is the default value for a \code{numeric} SOM), \code{none} (no 
